--- a/config/train.yml
+++ b/config/train.yml
@@ -1,4 +1,4 @@
-pickle_dir: '../MusicTransformer/dataset/processed'
+pickle_dir: '/content/Performance-RNN-PyTorch/output'
 epochs: 1000
 batch_size: 8
 load_path:
