--- a/config/train.yml
+++ b/config/train.yml
@@ -1,5 +1,6 @@
 pickle_dir: '/content/Performance-RNN-PyTorch/output'
-epochs: 1000
+epochs: 10
+#epochs: 1000
 batch_size: 8
 load_path:
 dropout: 0.1
